# cvl-joint

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: app.cpp  component.hpp  main.cpp  server.cpp  server.h
src/controller/: hello_controller.hpp  system_info.hpp
src/dto/: any_dto.hpp  server_dto.hpp
src/service/: system_info_service.cpp  system_info_service.hpp
